--- a/Example/MaterialKit/Base.lproj/Main.storyboard
+++ b/Example/MaterialKit/Base.lproj/Main.storyboard
@@ -179,11 +179,14 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="MKLabel" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WKH-q6-GEt" customClass="MKLabel" customModule="MaterialKit" customModuleProvider="target">
-                                <rect key="frame" x="137" y="164" width="100" height="45"/>
+                                <rect key="frame" x="137" y="92" width="100" height="45"/>
                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="wall-e.png" translatesAutoresizingMaskIntoConstraints="NO" id="XRE-rZ-Wco" customClass="MKImageView" customModule="MaterialKit" customModuleProvider="target">
+                                <rect key="frame" x="67" y="186" width="240" height="128"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
@@ -191,6 +194,7 @@
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
+                        <outlet property="imageView" destination="XRE-rZ-Wco" id="7Oo-Rq-9d9"/>
                         <outlet property="label" destination="WKH-q6-GEt" id="YCm-ON-4e0"/>
                     </connections>
                 </viewController>
@@ -362,5 +366,6 @@
     <resources>
         <image name="icon1.png" width="155" height="154"/>
         <image name="icon2.png" width="154" height="154"/>
+        <image name="wall-e.png" width="512" height="288"/>
     </resources>
 </document>
