--- a/Example/MaterialKit/Base.lproj/Main.storyboard
+++ b/Example/MaterialKit/Base.lproj/Main.storyboard
@@ -31,10 +31,10 @@
             </objects>
             <point key="canvasLocation" x="-997.5" y="900.5"/>
         </scene>
-        <!--View Controller-->
+        <!--Material Kit-->
         <scene sceneID="hZ7-Kt-diM">
             <objects>
-                <viewController id="gW2-cv-UYc" customClass="ViewController" customModule="MaterialKit" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController automaticallyAdjustsScrollViewInsets="NO" id="gW2-cv-UYc" customClass="ViewController" customModule="MaterialKit" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="1hs-LN-Qfp"/>
                         <viewControllerLayoutGuide type="bottom" id="PKx-yS-MIe"/>
@@ -141,17 +141,17 @@
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" id="xZ9-8q-Qyj"/>
+                    <navigationItem key="navigationItem" title="Material Kit" id="xZ9-8q-Qyj"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8KI-aO-hZU" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-526.5" y="900.5"/>
         </scene>
-        <!--Table View Controller-->
+        <!--Table View-->
         <scene sceneID="W8i-U2-cr8">
             <objects>
-                <viewController id="dgb-3A-4h0" customClass="TableViewController" customModule="MaterialKit" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController automaticallyAdjustsScrollViewInsets="NO" id="dgb-3A-4h0" customClass="TableViewController" customModule="MaterialKit" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="wUb-91-yKX"/>
                         <viewControllerLayoutGuide type="bottom" id="6kZ-m6-3Ep"/>
@@ -160,13 +160,13 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="MOV-3o-4WR">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="MOV-3o-4WR">
                                 <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <animations/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="MyCell" rowHeight="65" id="EnH-cu-c0A" customClass="MyCell" customModule="MaterialKit" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="86" width="375" height="65"/>
+                                        <rect key="frame" x="0.0" y="22" width="375" height="65"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="EnH-cu-c0A" id="r1H-dx-ucE">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="64"/>
@@ -197,8 +197,14 @@
                         </subviews>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="MOV-3o-4WR" secondAttribute="trailing" id="GgC-x3-Idy"/>
+                            <constraint firstItem="MOV-3o-4WR" firstAttribute="leading" secondItem="1Mu-es-dzX" secondAttribute="leading" id="R2e-HG-dJp"/>
+                            <constraint firstItem="6kZ-m6-3Ep" firstAttribute="top" secondItem="MOV-3o-4WR" secondAttribute="bottom" id="dTm-1D-iPw"/>
+                            <constraint firstItem="MOV-3o-4WR" firstAttribute="top" secondItem="wUb-91-yKX" secondAttribute="bottom" id="wEJ-oT-nv6"/>
+                        </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="E2N-nY-ehk"/>
+                    <navigationItem key="navigationItem" title="Table View" id="E2N-nY-ehk"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
                         <outlet property="tableView" destination="MOV-3o-4WR" id="7uD-Sb-GSn"/>
